footer style gefixt damit es immer ende ist, slider styling bug gefunden und behoben, slider attribute in den components entfernt, overflow bug gefunden und behoben

--- a/src/components/slider/slider.styles.scss
+++ b/src/components/slider/slider.styles.scss
@@ -13,11 +13,15 @@
     display: flex;
     position: absolute;
     width: 100%;
+    pointer-events: none;
+
+    & > * {
+      pointer-events: visible;
+    }
     .rechter-pfeil {
       margin-left: auto;
       transform: rotate(-90deg);
     }
-
     .linker-pfeil {
       transform: rotate(90deg);
     }
