--- a/src/pages/Liste/Liste.styles.scss
+++ b/src/pages/Liste/Liste.styles.scss
@@ -1,6 +1,8 @@
 .container-liste {
   position: relative;
   width: 100vw;
+  min-height: 100vh;
+  padding-bottom: 75px;
 
   .container-suchleiste-immo {
     display: flex;
@@ -8,6 +10,7 @@
     width: 70vw;
     max-width: 1120px;
     margin: 0 auto;
+
     .no-results {
       display: flex;
       background: #cca96a;
